--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <div class="text">
     <b>Let me know if you have any other questions or need further assistance—I’m happy to help! 😊
-      <center> <button class="next-button" onclick="navigateToNextPage()">Next</button></center>
+      <center> <button class="next-button" onclick="navigateToNextPage()">End</button></center>
   </div>
   <div class="logo">
     <p style="font-size:10px">
@@ -70,7 +70,7 @@ Alright, let’s jump back into the main content! But first—don’t forget to 
   </div>
   <script>
     function navigateToNextPage() {
-      window.location.href = "https://www.example.com"; // Replace with your desired URL
+      window.location.href = "https://progamer-chef.github.io/DI-1/"; // Replace with your desired URL
     }
   </script>
 
